# report

./: 2026-06-07-bugfix-sweep-vi.md  2026-06-07-bugfix-sweep.md  2026-06-07-data-quality-audit-vi.md  2026-06-07-data-quality-audit.md  2026-06-07-ontology-audit.md  2026-06-07-perf-sweep-vi.md  2026-06-07-perf-sweep.md  2026-06-08-analytics-refresh-incident.md  LONGHORN_ROOT_CAUSE_REPORT.md  MINIMIZATION_AUDIT.md  MINIMIZATION_REPORT.md  README.md  REPORT_ANALYSIS_AND_GAPS.md  SMAP_BUSINESS_DATA_PROCESS_STOP_REPORT.md  SMAP_CONVENTION_E2E_REPORT.md  SMAP_DASHBOARD_TRACE_REPORT.md  SMAP_E2E_FLOW_MAP.md  SMAP_MONITORING_DEPLOY_REPORT.md  SMAP_MONITORING_PLAN.md  SMAP_NAMING_CONVENTION.md  SMAP_PERF_DEBUG.md  SMAP_STABILITY_FIX_REPORT.md  SMAP_WORKSPACE_INDEX.md  STALE_CODE_AUDIT_REPORT.md  TMP_FEATURES_SUMMARY.md  TMP_IMPROVEMENT_PROPOSALS.md  instructions.md
analytic/: .dockerignore  .env.example  docker-compose.dev.yml  pyproject.toml
analytic/command/api/: main.py
analytic/config/: canary_deployment.yaml
analytic/core/: constants.py  dependencies.py  validation.py
analytic/document/: analytics-behavior.md  api-design-proposal.md  documentation.md  event-drivent.md  httponly_cookie_python_migration.md  logging-guide.md
analytic/examples/: impact_calculator_example.py  keyword_extractor_example.py  sentiment_example.py
analytic/infrastructure/ai/: __init__.py  phobert_onnx.py
analytic/infrastructure/compression/: interfaces.py
analytic/infrastructure/messaging/: publisher.py  rabbitmq.py
analytic/infrastructure/phobert/: README.md
analytic/infrastructure/storage/: constants.py
analytic/interfaces/: __init__.py
analytic/internal/api/: __init__.py  main.py
analytic/internal/api/routes/: alerts.py  errors.py  keywords.py  posts.py  trends.py
analytic/k8s/api-service/: configmap.yaml  deployment.yaml  secret.yaml
analytic/k8s/consumer-service/: deployment.yaml  secret.yaml
analytic/migrations/: env.py
analytic/migrations/versions/: b5146412efe5_merge_multiple_heads.py
analytic/models/: database.py  messages.py
analytic/models/schemas/: posts.py
analytic/openspec/: project.md
analytic/openspec/changes/implement-analytics-api/: tasks.md
analytic/openspec/specs/aspect_based_sentiment/: spec.md
analytic/openspec/specs/error_handling/: spec.md
analytic/openspec/specs/hybrid_keyword_extraction/: spec.md
analytic/openspec/specs/intent_classification/: spec.md
analytic/openspec/specs/keyword_extraction/: spec.md
analytic/openspec/specs/monitoring/: spec.md
analytic/openspec/specs/service_lifecycle/: spec.md
analytic/repository/: analytics_repository.py
analytic/scripts/: download_phobert_model.py  validate_migration.py
analytic/services/analytics/keyword/: keyword_extractor.py
analytic/services/analytics/sentiment/: __init__.py  sentiment_analyzer.py
analytic/tests/impact/: test_integration.py
analytic/tests/integration/: conftest.py  test_e2e_event_processing.py  test_event_integration.py  test_performance.py
analytic/tests/intent/: test_refinement.py  test_unit.py
analytic/tests/orchestrator/: __init__.py
analytic/tests/phobert/: test_unit.py
analytic/tests/preprocessing/: test_unit.py
analytic/tests/sentiment/: test_integration.py
analytic/tests/spacyyake/: test_performance.py
analytic/tests/storage/: test_integration.py
analytic/tests/test_consumers/: test_event_parsing.py
analytic/tests/test_keyword/: test_integration.py  test_performance.py
analytic/tests/test_messaging/: __init__.py  test_publisher.py
analytic/tests/test_models/: test_database_schema.py
analytic/tests/test_repositories/: test_analytics_repository.py
analytic/tests/test_utils/: test_error_categorization.py
analytic/tests/unit/repository/: test_analytics_api_repository.py
analytic/utils/: debug_logging.py  json_encoder.py
scrapper/playwight/: .env  .env.example  playwright-deployment.yaml  pyproject.toml
scrapper/playwight/cmd/api/: main.py  routes.py
scrapper/playwight/core/: config.py
scrapper/playwight/scripts/: build.sh
services/scrapper/tiktok/: .dockerignore  .env.example  Makefile  pyproject.toml
services/scrapper/tiktok/app/: __init__.py  worker_service.py
services/scrapper/tiktok/application/: crawler_service.py  interfaces.py
services/scrapper/tiktok/config/: settings.py
services/scrapper/tiktok/docs/: compression-guide.md  dryrun-result-message-format.md  implementation-plan-payload-options.md  rabbitmq-api.md
services/scrapper/tiktok/examples/: compression_usage.py
services/scrapper/tiktok/k8s/: secrets.yaml
services/scrapper/tiktok/scripts/: build.sh  configs.yaml
services/scrapper/tiktok/utils/: __init__.py  helpers.py  io_utils.py
services/scrapper/youtube/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
services/scrapper/youtube/app/: main.py  worker_service.py
services/scrapper/youtube/application/: crawler_service.py  task_service.py
speech2text/: .coveragerc  .gitignore  docker-compose.yml  pyproject.toml
speech2text/cmd/api/: __init__.py
speech2text/core/: __init__.py  constants.py  container.py  dependencies.py  errors.py
speech2text/document/: benchmark-guide.md  logging-guide.md  scaling-guide.md  stt-behavior.md  stt-integration.md  testing.md
speech2text/document/benchmark_results/: cpu_scaling_base_20251203_050330.json  cpu_scaling_base_20251203_050957.json  cpu_scaling_report.md
speech2text/infrastructure/http/: __init__.py  audio_downloader.py
speech2text/infrastructure/minio/: __init__.py  audio_downloader.py
speech2text/infrastructure/whisper/: __init__.py  engine.py
speech2text/interfaces/: __init__.py  transcriber.py
speech2text/k8s/: deployment.yaml  pvc.yaml
speech2text/scripts/: analyze_benchmark.py  benchmark_all_audio.sh  build-api.sh  dev-startup.sh  download_whisper_artifacts.py  run_benchmark_mac.sh
speech2text/scripts/test_reports/: .gitkeep
speech2text/services/: __init__.py  async_transcription.py
speech2text/tests/: test_api_transcribe.py  test_api_transcribe_v2.py  test_service_initialization.py
(+2141 files in other folders)
