[project]
name = "analytics-engine"
version = "0.1.0"
description = "Social media analytics processing service"
readme = "README.md"
requires-python = ">=3.10"
# Core dependencies (shared by both API and Consumer)
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=2.0.0",
    "alembic>=1.12.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "loguru>=0.7.3",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
# API service dependencies (lightweight)
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

# Consumer service dependencies (ML/Analytics - heavy)
consumer = [
    "optimum[onnxruntime]>=2.0.0",
    "transformers>=4.55.4",
    "pyvi>=0.1.1",
    "torch>=2.9.1",
    "spacy>=3.7.0",
    "yake>=0.4.8",
    "numpy>=1.24.0",
    "minio>=7.2.10",
    "zstandard>=0.22.0",
    "aio-pika>=9.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=5.2.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

# All dependencies (for local development)
all = [
    "analytics-engine[api,consumer,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.deptry]
extend_exclude = ["tests", "examples", "scripts", "migrations"]

[tool.deptry.per_rule_ignores]
DEP001 = ["internal"]
DEP002 = [
    "python-dotenv",
    "psycopg2-binary",
    "asyncpg",
    "alembic",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-benchmark",
    "black",
    "ruff",
    "mypy",
]

[tool.deptry.package_module_name_map]
python-dotenv = "dotenv"
psycopg2-binary = "psycopg2"
pyyaml = "yaml"
