[project]
name = "speech2text"
version = "0.1.0"
description = "A high-performance Speech-to-Text (STT) system built with **FastAPI**, **RabbitMQ**, and **Whisper.cpp**. Designed for scalability, parallel processing, and asynchronous job handling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.3.1",
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiormq==6.7.7",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "apscheduler==3.10.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "audioread==3.1.0",
    "beanie==1.24.0",
    "black==23.12.0",
    "boto3>=1.41.5",
    "charset-normalizer==3.4.4",
    "decorator==5.2.1",
    "email-validator==2.1.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "frozenlist==1.8.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.25.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "joblib==1.5.2",
    "lazy-loader==0.4",
    "lazy-model==0.2.0",
    "librosa==0.10.1",
    "llvmlite==0.45.1",
    "loguru==0.7.2",
    "minio==7.2.0",
    "motor==3.3.2",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "mypy==1.7.1",
    "mypy-extensions==1.1.0",
    "numba==0.62.1",
    "numpy==1.26.2",
    "packaging==25.0",
    "pamqp==3.2.1",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pooch==1.8.2",
    "propcache==0.4.1",
    "pycodestyle==2.11.1",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pydantic-settings==2.1.0",
    "pydub==0.25.1",
    "pyflakes==3.1.0",
    "pymongo==4.6.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pytz==2025.2",
    "pyyaml==6.0.1",
    "redis==5.0.1",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools>=65.5.0",
    "six==1.17.0",
    "soundfile==0.12.1",
    "soxr==1.0.0",
    "starlette==0.27.0",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tomli==2.3.0",
    "typing-extensions==4.15.0",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.24.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "yarl==1.22.0",
]
