[project]
name = "playwright_service"
version = "0.1.0"
description = "Playwright service with FastAPI and persistent contexts"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "playwright==1.55.0",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmd", "core", "services", "models"]
