[project]
name = "youtube-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.0.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "colorlog>=6.7.0",
    "httpx>=0.27.0",
    "minio>=7.1.0",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "youtube-comment-downloader>=0.1.0",
    "yt-dlp>=2023.0.0",
    "zstandard>=0.22.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest-asyncio>=1.3.0",
    "zstandard>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests",
    "asyncio: Async tests",
]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-p", "no:warnings",
]
